# bazaar-notifications

./: .env.example  .gitignore  Dockerfile  pyproject.toml
src/: lifespan.py  main.py
src/api/core/logs/: logger.py
src/api/routes/: websocket.py
src/config/: settings.py
src/domain/: services.py
src/infrastructure/message_brokers/: base.py
src/infrastructure/message_brokers/kafka/: kafka.py
src/infrastructure/redis/: base.py
src/infrastructure/websocket/: connection.py
