[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["kaveringleb <kaveringleb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
flake8 = "^7.1.1"
pydantic = "^2.10.4"
aiokafka = "^0.12.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.0"
redis = "^5.2.1"
websockets = "^14.1"
black = "^24.10.0"
isort = "^5.13.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
